改进使用canvas元素 可以画画了

--- a/index.html
+++ b/index.html
@@ -9,24 +9,21 @@
 </head>
 
 <body>
-    <div id="canvas"></div>
-    <script>
-        canvas.onmousemove = (e) => {
+    <canvas id="canvas" width="800" height="500">
 
-            console.log(e.clientX);
-            console.log(e.clientY);
-            let div = document.createElement('div');
-            div.style.position = 'absolute';
-            div.style.left = e.clientX + 'px';
-            div.style.top = e.clientY + 'px';
-            div.style.background = 'black';
-            div.style.width = '6px';
-            div.style.height = '6px';
-            div.style.marginLeft = '-3px';
-            div.style.marginTop = '-3px';
-            div.style.borderRadius = '50%';
-            canvas.appendChild(div);
+    </canvas>
+    <script>
+        var canvas = document.getElementById("canvas");
+        canvas.width = document.documentElement.clientWidth;
+        canvas.height = document.documentElement.clientHeight;
+        var ctx = canvas.getContext("2d");
+
+        ctx.fillStyle = "hotpink";
+
+        canvas.onmousemove = (e) => {
+            ctx.fillRect(e.clientX - 5, e.clientY - 5, 10, 10);
         }
+
     </script>
 </body>
 
