--- a/index.html
+++ b/index.html
@@ -13,17 +13,32 @@
 
     </canvas>
     <script>
-        var canvas = document.getElementById("canvas");
+        let canvas = document.getElementById("canvas");
         canvas.width = document.documentElement.clientWidth;
         canvas.height = document.documentElement.clientHeight;
-        var ctx = canvas.getContext("2d");
+        let ctx = canvas.getContext("2d");
+        let painting = false;
 
-        ctx.fillStyle = "hotpink";
+        ctx.fillStyle = "black";
 
-        canvas.onmousemove = (e) => {
-            ctx.fillRect(e.clientX - 5, e.clientY - 5, 10, 10);
+        canvas.onmousedown = () => {
+            painting = true;
         }
 
+        canvas.onmousemove = (e) => {
+            if (painting === true) {
+                ctx.beginPath();
+                ctx.arc(e.clientX, e.clientY, 10, 0, 2 * Math.PI);
+                ctx.stroke();
+                ctx.fill();
+            } else {
+                console.log('什么都不做');
+            }
+        }
+
+        canvas.onmouseup = () => {
+            painting = false;
+        }
     </script>
 </body>
 
