--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@
         let ctx = canvas.getContext("2d");
         ctx.fillStyle = "black";
         let painting = false;
+        let last;
+
+        function drawLine(x1, y1, x2, y2) {
+            ctx.beginPath();
+            ctx.moveTo(x1, y1);
+            ctx.lineTo(x2, y2);
+            ctx.stroke();
+        }
+
+
+
+
+
+
+
+
+
         var isTouchDevice = 'ontouchstart' in document.documentElement;
         if (isTouchDevice) {
             canvas.ontouchmove = (e) => {
@@ -30,16 +47,15 @@
                 ctx.fill();
             }
         } else {
-            canvas.onmousedown = () => {
+            canvas.onmousedown = (e) => {
                 painting = true;
+                last = [e.clientX, e.clientY];
             }
 
             canvas.onmousemove = (e) => {
                 if (painting === true) {
-                    ctx.beginPath();
-                    ctx.arc(e.clientX, e.clientY, 10, 0, 2 * Math.PI);
-                    ctx.stroke();
-                    ctx.fill();
+                    drawLine(last[0], last[1], e.clientX, e.clientY);
+                    last = [e.clientX, e.clientY];
                 } else {
                     console.log('什么都不做');
                 }
