--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         canvas.height = document.documentElement.clientHeight;
         let ctx = canvas.getContext("2d");
         ctx.fillStyle = "black";
+        ctx.lineWidth = 15;
+        ctx.lineCap = 'round';
         let painting = false;
         let last;
 
@@ -27,24 +29,18 @@
             ctx.lineTo(x2, y2);
             ctx.stroke();
         }
-
-
-
-
-
-
-
-
-
         var isTouchDevice = 'ontouchstart' in document.documentElement;
         if (isTouchDevice) {
+            canvas.ontouchstart = (e) => {
+                let x = e.touches[0].clientX;
+                let y = e.touches[0].clientY;
+                last = [x, y];
+            }
             canvas.ontouchmove = (e) => {
                 let x = e.touches[0].clientX;
                 let y = e.touches[0].clientY;
-                ctx.beginPath();
-                ctx.arc(x, y, 10, 0, 2 * Math.PI);
-                ctx.stroke();
-                ctx.fill();
+                drawLine(last[0], last[1], x, y);
+                last = [x, y];
             }
         } else {
             canvas.onmousedown = (e) => {
